--- a/newton-ball/NewtonCradle/Assembly-CSharp.csproj
+++ b/newton-ball/NewtonCradle/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\BallConC.cs" />
     <Compile Include="Assets\buttionCon.cs" />
+    <Compile Include="Assets\endSwing.cs" />
     <Compile Include="Assets\scripts\ballCon.cs" />
     <Compile Include="Assets\scripts\CradleCon.cs" />
     <None Include="Assets\VRTK\Dependencies\Zinnia.Unity\Dependencies\FodyWeavers.xml" />
